syntax = "proto2";
package interfaces;
import "common.proto";

//接口信息 只做透传
message interface_info_ask
{
    optional bytes uap_topic        = 1; //统一接入平台主题
    optional bytes json_ask         = 2; //JSON字符串
}

message interface_info_ans
{
    optional bytes                 json_ans         = 1;
    optional common.errorinfo      error            = 2; //内部使用错误代码(与业务无关)
}